--- a/package.json
+++ b/package.json
@@ -1,5 +1,17 @@
 {
+  "type": "commonjs",
+  "name": "routes",
+  "version": "1.0.0",
+  "description": "",
+  "main": "home.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Leandro",
+  "license": "ISC",
   "dependencies": {
-    "sequelize": "^6.37.3"
+    "express": "^4.19.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.3"
   }
 }
